static/style.css
body {
    background-color: #001233;
    display: flex;
    flex-direction: column;
    justify-content: center; 
    align-items: center;
    min-height: 100vh;

  
}

h1 {
    font-size: 100px;
    font-family: Gill Sans;
    font-weight: bolder;
    color: #ffffff;
    text-align: center;
    width: 100%;
    max-width: 700px;
}
.Felder {
    background: #065A82;
    border-radius: 12px;
    padding: 4rem;
    display: flex;
    margin:  2rem;
    width: 100%;
    max-width: 700px;
    color: #ffffff;
    font-family: 'Space grotesk';
    font-weight: bold;
    width: 100%;
    max-width: 700px;
    align-items: flex-end
}

.datum-feld, .zeit, .checkbox, .eintragen {
    padding: 5px;
    margin: 5rem;
    
}
.label {
    display: flex;
    border-radius: 80px;
}
.checkbox {
    padding: 5px;
    margin: 5px;
}


.Name {
    margin-top: 20px;
    margin-bottom: 20px;
    align-items: center;
    font-size: 15px;
    font-family: Tahoma;
    padding: 0.5px;
    border-radius: 80px;
}
.button {
    background-image: none;
    cursor: pointer;
    font-size: 100%;
    line-height: 1.5;
    outline: #000000;
    border-radius: 99px;
    overflow: hidden;
    padding: 1.2rem 3rem;
    position: relative;
    background-color: #E9C46A;
    border-color: #33415C;
    font-size: 12.5px;
    color: #000000;
    border-radius: 25px;
    padding: 9px;
    text-align: center;
    cursor: pointer;
    width: 100px;
    height: 30px;
    font-family: 'Space grotesk';
    font-weight: bold;

}
.Eintrag {
    color: #ffffff;
    border: var(--border);
    padding: 5px;
    margin: 5px;
    width: 100%;   
}
input {
    background-color: #1B3B6F;
    border: black;
    border-width: 1px solid;
    color: #ffffff;
    border-radius: 25px;
    width: 120px;
    height: 45px;
    text-align: center;
    padding: 5px;
}

